--- a/CCIP/CCIP/Base.lproj/Main.storyboard
+++ b/CCIP/CCIP/Base.lproj/Main.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
@@ -1349,28 +1350,42 @@ Label2</string>
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notice" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Z6-qe-NGN">
-                                <rect key="frame" x="40" y="114" width="334" height="28"/>
-                                <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
-                                <color key="textColor" red="0.0" green="0.60392156860000001" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2fx-YY-cpu">
-                                <rect key="frame" x="57" y="268" width="300" height="300"/>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UeV-OE-1gf">
+                                <rect key="frame" x="20" y="64" width="374" height="623"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Notice" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="14" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Z6-qe-NGN">
+                                        <rect key="frame" x="20" y="50" width="334" height="79"/>
+                                        <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
+                                        <color key="textColor" red="0.0" green="0.60392156860000001" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2fx-YY-cpu">
+                                        <rect key="frame" x="-13" y="179" width="400" height="394"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="2fx-YY-cpu" secondAttribute="height" multiplier="1:1" id="LMW-lT-n6o"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="pgM-Zw-ZgW"/>
-                                    <constraint firstAttribute="height" constant="300" id="wyG-1W-UGu"/>
+                                    <constraint firstItem="5Z6-qe-NGN" firstAttribute="top" relation="lessThanOrEqual" secondItem="UeV-OE-1gf" secondAttribute="top" constant="50" id="3GU-aV-N7k"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="2fx-YY-cpu" secondAttribute="bottom" id="8jv-3e-WKh"/>
+                                    <constraint firstItem="5Z6-qe-NGN" firstAttribute="top" relation="greaterThanOrEqual" secondItem="UeV-OE-1gf" secondAttribute="top" id="9K5-R9-2VC"/>
+                                    <constraint firstItem="2fx-YY-cpu" firstAttribute="width" relation="lessThanOrEqual" secondItem="UeV-OE-1gf" secondAttribute="width" constant="-20" id="ZB9-YI-29I"/>
+                                    <constraint firstItem="5Z6-qe-NGN" firstAttribute="centerX" secondItem="UeV-OE-1gf" secondAttribute="centerX" id="ckf-7l-BGM"/>
+                                    <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="2fx-YY-cpu" secondAttribute="bottom" constant="50" id="fsH-Jz-ymt"/>
+                                    <constraint firstItem="2fx-YY-cpu" firstAttribute="centerX" secondItem="UeV-OE-1gf" secondAttribute="centerX" id="gSK-WG-gFh"/>
+                                    <constraint firstItem="5Z6-qe-NGN" firstAttribute="width" secondItem="UeV-OE-1gf" secondAttribute="width" constant="-40" id="he7-0k-wb6"/>
+                                    <constraint firstItem="2fx-YY-cpu" firstAttribute="top" relation="greaterThanOrEqual" secondItem="5Z6-qe-NGN" secondAttribute="bottom" constant="5" id="pQZ-tb-AYE"/>
+                                    <constraint firstItem="2fx-YY-cpu" firstAttribute="top" relation="lessThanOrEqual" secondItem="5Z6-qe-NGN" secondAttribute="bottom" constant="50" id="xyG-xs-lTh"/>
                                 </constraints>
-                            </imageView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="5Z6-qe-NGN" secondAttribute="trailing" constant="20" id="CdK-h9-RTz"/>
-                            <constraint firstItem="5Z6-qe-NGN" firstAttribute="centerX" secondItem="xsM-mw-hCm" secondAttribute="centerX" id="KxR-Oy-z0D"/>
-                            <constraint firstItem="5Z6-qe-NGN" firstAttribute="leading" secondItem="xsM-mw-hCm" secondAttribute="leadingMargin" constant="20" id="Md6-pY-Wuf"/>
-                            <constraint firstItem="2fx-YY-cpu" firstAttribute="centerY" secondItem="xsM-mw-hCm" secondAttribute="centerY" constant="50" id="dRg-w6-8Ns"/>
-                            <constraint firstItem="2fx-YY-cpu" firstAttribute="centerX" secondItem="xsM-mw-hCm" secondAttribute="centerX" id="pXl-xb-zWL"/>
-                            <constraint firstItem="5Z6-qe-NGN" firstAttribute="top" secondItem="cwW-fC-Vjt" secondAttribute="bottom" constant="50" id="zUI-T7-byO"/>
+                            <constraint firstItem="UeV-OE-1gf" firstAttribute="width" secondItem="xsM-mw-hCm" secondAttribute="width" id="D6U-vY-4hn"/>
+                            <constraint firstItem="UeV-OE-1gf" firstAttribute="top" secondItem="cwW-fC-Vjt" secondAttribute="bottom" id="tvZ-wJ-vxg"/>
+                            <constraint firstItem="wQV-ys-1PX" firstAttribute="top" secondItem="UeV-OE-1gf" secondAttribute="bottom" id="wu2-N8-Ydw"/>
                         </constraints>
                     </view>
                     <connections>
@@ -1543,7 +1558,7 @@ Label2</string>
             <objects>
                 <navigationController id="2iG-px-jKh" customClass="MainNavViewController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Schedule" image="AssetsUI.bundle/icon_ios_topcharts.png" id="s9e-mH-WEn"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="geD-Aj-Nie">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="geD-Aj-Nie">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -1560,7 +1575,7 @@ Label2</string>
             <objects>
                 <navigationController id="PXh-Tj-uNR" customClass="MainNavViewController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="More" image="AssetsUI.bundle/icon_ios_more.png" id="X9A-yE-P7Z"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VT9-lH-fKX">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="VT9-lH-fKX">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
